@@ -498,7 +498,7 @@
 	      <child>
 		<widget class="GtkLabel" id="progressfile">
 		  <property name="visible">True</property>
-		  <property name="label">current file being processed</property>
+		  <property name="label"></property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
