@@ -1,3 +1,8 @@
+2006-09-05  Gautier Portet <kassoulet gmail com>
+
+	* soundconverter.py: Add a blacklist of mime type known not to have tags,
+	to pass them faster.
+
 2006-09-03  Gautier Portet <kassoulet gmail com>
 
 	* soundconverter.py: Fix quoting of tags when generating filenames.
